# homard

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json
Formula/: homard.rb
cli/: Cargo.toml
cli/src/: main.rs
crates/arcctl-core/: Cargo.toml
crates/arcctl-core/src/: agents.rs  config.rs  error.rs  executor.rs  health.rs  keychain.rs  launchd.rs  lib.rs  mcp_sync.rs  process.rs  profile.rs  project_defaults.rs  provider.rs  schedule.rs  session_monitor.rs  settings.rs  store.rs  telegram.rs  types.rs
crates/arcctl-core/src/parsers/: claude.rs  gemini.rs  mod.rs
crates/homard-core/: Cargo.toml
crates/homard-core/arcctl-core/: Cargo.toml
crates/homard-core/arcctl-core/src/: config.rs  error.rs  launchd.rs  store.rs  telegram.rs  terminal.rs
crates/homard-core/src/: config.rs  diagnostics.rs  error.rs  health.rs  keychain.rs  launchd.rs  lib.rs  schedule.rs  secrets.rs  store.rs  telegram.rs  terminal.rs  types.rs
crates/homard-core/src/agent/: context.rs  hang.rs  loop.rs  mod.rs
crates/homard-core/src/api/: mod.rs  routes.rs
crates/homard-core/src/llm/: anthropic.rs  cli_backend.rs  client.rs  codex_server.rs  mod.rs  oauth.rs  openai.rs
crates/homard-core/src/scheduler/: cron.rs  heartbeat.rs  mod.rs
crates/homard-core/src/security/: mod.rs  prompt_guard.rs  sandbox.rs
crates/homard-core/src/telegram/: client.rs  mod.rs  poller.rs
crates/homard-core/src/tools/: files.rs  memory.rs  mod.rs  registry.rs  session.rs  shell.rs  user_profile.rs  web.rs
defaults/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
docs/: SESSION-NOTES.md
docs/superpowers/plans/: 2026-03-18-multi-cli-mission-control.md
docs/superpowers/specs/: 2026-03-18-multi-cli-mission-control-design.md  2026-04-08-homard-design.md  2026-04-10-activity-tab-redesign.md  2026-04-10-roadmap.md  2026-04-10-telegram-mini-app.md  2026-04-21-cli-control-plane-refactor.md  2026-05-04-agent-registry-design.md
records/: README.md
records/_schemas/: immunization-tracker.schema.json
records/dashboard/: vaccine-tracker.md
records/elodie/: vaccines.generated.json  vaccines.md
records/olivia/: vaccines.generated.json  vaccines.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs  telegram_poller.rs  tray.rs
src-tauri/src/commands/: config.rs  email.rs  health.rs  mcp_sync.rs  mod.rs  process.rs  profile.rs  scheduler.rs  settings.rs  telegram.rs
src/components/: AgentTree.tsx  NewSessionModal.tsx  ProfileSwitcher.tsx  QuickPrompt.tsx  SessionDetail.tsx
src/components/scheduler/: CreateScheduleForm.tsx  CronBuilder.tsx  ImportSection.tsx  ScheduleDetail.tsx
src/components/settings/: AgentsBrowser.tsx  EmailPanel.tsx  EnvVarsPanel.tsx  McpServersPanel.tsx  PermissionsPanel.tsx  ProfilesPanel.tsx  TelegramPanel.tsx
src/lib/: api.ts  store.ts  tauri.ts  types.ts
src/pages/: Activity.tsx  Assistant.tsx  Chat.tsx  Health.tsx  Scheduler.tsx  Sessions.tsx  Settings.tsx
