[workspace]
members = [
    "src-tauri",
    "crates/arcctl-core",
    "cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
teloxide = { version = "0.17", features = ["macros"] }
