[package]
name = "arcctl-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
plist = "1"
security-framework = "3"
dirs = "6"
whoami = "1"
libc = "0.2"
regex-lite = "0.1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
