[package]
name = "homard-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
teloxide = { workspace = true }
plist = "1"
security-framework = "3"
dirs = "6"
regex-lite = "0.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
